--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -150,6 +150,7 @@ jobs:
           if [ ! -f "$dockerfile_path" ]; then
             echo "Dockerfile not found in $dockerfile_path. Creating one..."
             echo "FROM python:3-alpine" > "$dockerfile_path"
+            echo "RUN apk add --no-cache openssl ca-certificates" >> "$dockerfile_path"
 
             # Check if current worker is among special alpine workers
             if echo "$special_alpine_workers" | grep -qw "$matrix_directory"; then
@@ -557,6 +558,8 @@ jobs:
           if [ ! -f "$dockerfile_path" ]; then
             echo "Dockerfile not found in $dockerfile_path. Creating one..."
             echo "FROM python:3-alpine" > "$dockerfile_path"
+            echo "RUN apk add --no-cache openssl ca-certificates" >> "$dockerfile_path"
+
 
             # Check if current worker is among special alpine workers
             if echo "$special_alpine_workers" | grep -qw "$matrix_directory"; then
