--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -145,17 +145,19 @@ jobs:
           command_value="${{ env.COMMAND }}"
 
           # Add multiple workers separated by spaces
-          special_alpine_workers="PaloAltoNGFW Worker2 Worker3 AnotherWorker"
+          #special_alpine_workers="PaloAltoNGFW Worker2 Worker3 AnotherWorker"
 
           if [ ! -f "$dockerfile_path" ]; then
             echo "Dockerfile not found in $dockerfile_path. Creating one..."
-            echo "FROM python:3-alpine" > "$dockerfile_path"
-            echo "RUN apk add --no-cache openssl ca-certificates" >> "$dockerfile_path"
+            #echo "FROM python:3-alpine" > "$dockerfile_path"
+            #echo "RUN apk add --no-cache openssl ca-certificates" >> "$dockerfile_path"
+            echo "FROM python:3-slim" > "$dockerfile_path"
+            # echo "RUN apt-get update && apt-get install -y --no-install-recommends ca-certificates && rm -rf /var/lib/apt/lists/*" >> "$dockerfile_path"
 
             # Check if current worker is among special alpine workers
-            if echo "$special_alpine_workers" | grep -qw "$matrix_directory"; then
-              echo "RUN apk add --no-cache file-dev && rm -rf /var/cache/apk/*" >> "$dockerfile_path"
-            fi
+            #if echo "$special_alpine_workers" | grep -qw "$matrix_directory"; then
+            #  echo "RUN apk add --no-cache file-dev && rm -rf /var/cache/apk/*" >> "$dockerfile_path"
+            #fi
 
             echo "WORKDIR /worker" >> "$dockerfile_path"
             echo "COPY requirements.txt ${matrix_directory}/" >> "$dockerfile_path"
@@ -558,7 +560,7 @@ jobs:
           if [ ! -f "$dockerfile_path" ]; then
             echo "Dockerfile not found in $dockerfile_path. Creating one..."
             echo "FROM python:3-alpine" > "$dockerfile_path"
-            echo "RUN apk add --no-cache openssl ca-certificates" >> "$dockerfile_path"
+            echo "RUN apk add --no-cache openssl ca-certificates bind-tools" >> "$dockerfile_path"
 
 
             # Check if current worker is among special alpine workers
