--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,6 +11,12 @@ on:
     # Every Month, the first day at 8:42 
     - cron: "42 8 1 * *"
 
+permissions:
+  contents: write
+  security-events: write
+  packages: write
+  actions: read
+
 jobs:
   generate-matrix:
     name: Generate Matrix
@@ -145,7 +151,7 @@ jobs:
           command_value="${{ env.COMMAND }}"
 
           # Add multiple workers separated by spaces
-          special_alpine_workers="PaloAltoNGFW Worker2 Worker3 AnotherWorker"
+          special_alpine_workers="PaloAltoNGFW FileInfo Worker2 Worker3 AnotherWorker"
 
           if [ ! -f "$dockerfile_path" ]; then
             echo "Dockerfile not found in $dockerfile_path. Creating one..."
@@ -191,9 +197,9 @@ jobs:
         run: |
           set +x  # Disable command echoing for security
 
-          # Force rebuild on scheduled runs (cron)
-          if [ "${{ github.event_name }}" = "schedule" ]; then
-            echo "Scheduled run detected - forcing rebuild"
+          # Force rebuild on scheduled runs (cron) and manual triggers
+          if [ "${{ github.event_name }}" = "schedule" ] || [ "${{ github.event_name }}" = "workflow_dispatch" ]; then
+            echo "Scheduled run or manual trigger detected - forcing rebuild"
             echo "rebuild=true" >> $GITHUB_OUTPUT
             exit 0
           fi
@@ -293,15 +299,52 @@ jobs:
             org.opencontainers.image.url=https://thehive-project.org
             org.opencontainers.image.version=${{ env.VERSION }}
 
+      - name: Get image digest for Trivy scan
+        id: get-digest
+        run: |
+          # Get the digest of the pushed image using buildx imagetools
+          IMAGE_DIGEST=$(docker buildx imagetools inspect ghcr.io/${{ env.LOWER_REPO_OWNER }}/${{ env.LOWERCASE_NAME }}:${{ env.IMAGE_TAG }} 2>/dev/null | grep "^Digest:" | awk '{print $2}' || echo "")
+          
+          if [ -n "$IMAGE_DIGEST" ]; then
+            IMAGE_DIGEST="ghcr.io/${{ env.LOWER_REPO_OWNER }}/${{ env.LOWERCASE_NAME }}@$IMAGE_DIGEST"
+          else
+            # Fallback: try docker inspect for RepoDigests
+            IMAGE_DIGEST=$(docker inspect ghcr.io/${{ env.LOWER_REPO_OWNER }}/${{ env.LOWERCASE_NAME }}:${{ env.IMAGE_TAG }} --format='{{index .RepoDigests 0}}' 2>/dev/null || echo "")
+            
+            if [ -z "$IMAGE_DIGEST" ]; then
+              # Fallback: try to get digest from local images
+              IMAGE_DIGEST=$(docker images --digests ghcr.io/${{ env.LOWER_REPO_OWNER }}/${{ env.LOWERCASE_NAME }} --format "table {{.Repository}}:{{.Tag}}\t{{.Digest}}" | grep ":${{ env.IMAGE_TAG }}" | awk '{print $2}' | head -1)
+              if [ -n "$IMAGE_DIGEST" ] && [ "$IMAGE_DIGEST" != "<none>" ]; then
+                IMAGE_DIGEST="ghcr.io/${{ env.LOWER_REPO_OWNER }}/${{ env.LOWERCASE_NAME }}@$IMAGE_DIGEST"
+              else
+                # Ultimate fallback: use tag
+                IMAGE_DIGEST="ghcr.io/${{ env.LOWER_REPO_OWNER }}/${{ env.LOWERCASE_NAME }}:${{ env.IMAGE_TAG }}"
+              fi
+            fi
+          fi
+          echo "IMAGE_DIGEST=$IMAGE_DIGEST" >> $GITHUB_OUTPUT
+          echo "Using image reference for Trivy scan: $IMAGE_DIGEST"
+
       - name: Scan image for vulnerabilities (Trivy)
+        if: steps.check-rebuild.outputs.rebuild == 'true'
         uses: aquasecurity/trivy-action@0.33.1
         with:
-          image-ref: ghcr.io/${{ env.LOWER_REPO_OWNER }}/${{ env.LOWERCASE_NAME }}:${{ env.IMAGE_TAG }}
-          format: table
+          image-ref: ${{ steps.get-digest.outputs.IMAGE_DIGEST }}
+          format: sarif
+          output: trivy.sarif
           vuln-type: 'os,library'
-          severity: 'CRITICAL,HIGH'
+          severity: 'CRITICAL,HIGH,MEDIUM'
           exit-code: 0
           ignore-unfixed: true
+          timeout: 10m
+          skip-files: '**/*.yara,**/*.cvd'
+
+      - name: Upload Trivy scan results to GitHub Security tab
+        if: steps.check-rebuild.outputs.rebuild == 'true'
+        uses: github/codeql-action/upload-sarif@v3
+        with:
+          sarif_file: trivy.sarif
+          category: trivy-${{ matrix.directory }}
 
       - name: Test imports in the container (amd64)
         if: ${{ steps.check-rebuild.outputs.rebuild == 'true' && contains(env.PLATFORMS, 'linux/amd64') }}
@@ -584,7 +627,7 @@ jobs:
           command_value="${{ env.COMMAND }}"
 
           # Add multiple workers separated by spaces
-          special_alpine_workers="PaloAltoNGFW Worker2 Worker3 AnotherWorker"
+          special_alpine_workers="PaloAltoNGFW FileInfo Worker2 Worker3 AnotherWorker"
 
           if [ ! -f "$dockerfile_path" ]; then
             echo "Dockerfile not found in $dockerfile_path. Creating one..."
@@ -630,9 +673,9 @@ jobs:
         run: |
           set +x  # Disable command echoing for security
 
-          # Force rebuild on scheduled runs (cron)
-          if [ "${{ github.event_name }}" = "schedule" ]; then
-            echo "Scheduled run detected - forcing rebuild"
+          # Force rebuild on scheduled runs (cron) and manual triggers
+          if [ "${{ github.event_name }}" = "schedule" ] || [ "${{ github.event_name }}" = "workflow_dispatch" ]; then
+            echo "Scheduled run or manual trigger detected - forcing rebuild"
             echo "rebuild=true" >> $GITHUB_OUTPUT
             exit 0
           fi
@@ -732,15 +775,52 @@ jobs:
             org.opencontainers.image.url=https://thehive-project.org
             org.opencontainers.image.version=${{ env.VERSION }}
 
+      - name: Get image digest for Trivy scan
+        id: get-digest-responder
+        run: |
+          # Get the digest of the pushed image using buildx imagetools
+          IMAGE_DIGEST=$(docker buildx imagetools inspect ghcr.io/${{ env.LOWER_REPO_OWNER }}/${{ env.LOWERCASE_NAME }}:${{ env.IMAGE_TAG }} 2>/dev/null | grep "^Digest:" | awk '{print $2}' || echo "")
+          
+          if [ -n "$IMAGE_DIGEST" ]; then
+            IMAGE_DIGEST="ghcr.io/${{ env.LOWER_REPO_OWNER }}/${{ env.LOWERCASE_NAME }}@$IMAGE_DIGEST"
+          else
+            # Fallback: try docker inspect for RepoDigests
+            IMAGE_DIGEST=$(docker inspect ghcr.io/${{ env.LOWER_REPO_OWNER }}/${{ env.LOWERCASE_NAME }}:${{ env.IMAGE_TAG }} --format='{{index .RepoDigests 0}}' 2>/dev/null || echo "")
+            
+            if [ -z "$IMAGE_DIGEST" ]; then
+              # Fallback: try to get digest from local images
+              IMAGE_DIGEST=$(docker images --digests ghcr.io/${{ env.LOWER_REPO_OWNER }}/${{ env.LOWERCASE_NAME }} --format "table {{.Repository}}:{{.Tag}}\t{{.Digest}}" | grep ":${{ env.IMAGE_TAG }}" | awk '{print $2}' | head -1)
+              if [ -n "$IMAGE_DIGEST" ] && [ "$IMAGE_DIGEST" != "<none>" ]; then
+                IMAGE_DIGEST="ghcr.io/${{ env.LOWER_REPO_OWNER }}/${{ env.LOWERCASE_NAME }}@$IMAGE_DIGEST"
+              else
+                # Ultimate fallback: use tag
+                IMAGE_DIGEST="ghcr.io/${{ env.LOWER_REPO_OWNER }}/${{ env.LOWERCASE_NAME }}:${{ env.IMAGE_TAG }}"
+              fi
+            fi
+          fi
+          echo "IMAGE_DIGEST=$IMAGE_DIGEST" >> $GITHUB_OUTPUT
+          echo "Using image reference for Trivy scan: $IMAGE_DIGEST"
+
       - name: Scan image for vulnerabilities (Trivy)
+        if: steps.check-rebuild.outputs.rebuild == 'true'
         uses: aquasecurity/trivy-action@0.33.1
         with:
-          image-ref: ghcr.io/${{ env.LOWER_REPO_OWNER }}/${{ env.LOWERCASE_NAME }}:${{ env.IMAGE_TAG }}
-          format: table
+          image-ref: ${{ steps.get-digest-responder.outputs.IMAGE_DIGEST }}
+          format: sarif
+          output: trivy.sarif
           vuln-type: 'os,library'
-          severity: 'CRITICAL,HIGH'
+          severity: 'CRITICAL,HIGH,MEDIUM'
           exit-code: 0
           ignore-unfixed: true
+          timeout: 10m
+          skip-files: '**/*.yara,**/*.cvd'
+
+      - name: Upload Trivy scan results to GitHub Security tab
+        if: steps.check-rebuild.outputs.rebuild == 'true'
+        uses: github/codeql-action/upload-sarif@v3
+        with:
+          sarif_file: trivy.sarif
+          category: trivy-${{ matrix.directory }}
 
       - name: Test imports in the container (amd64)
         if: ${{ steps.check-rebuild.outputs.rebuild == 'true' && contains(env.PLATFORMS, 'linux/amd64') }}
